add debug to js test driver to show error trace in bamboo build

--- a/dev/tests/js/jsTestDriver.conf
+++ b/dev/tests/js/jsTestDriver.conf
@@ -4,4 +4,5 @@ load:
   - ../../../pub/lib/globalize/*.js
   - ../../../pub/lib/globalize/cultures/*.js
   - ../../../pub/lib/mage/localization/*.js
+test:
   - ../../../dev/tests/js/testsuite/mage/localization/*.js
