--- a/fixture/enterprise2/core/Mage/SystemConfiguration/data/WebsiteRestrictions.yml
+++ b/fixture/enterprise2/core/Mage/SystemConfiguration/data/WebsiteRestrictions.yml
@@ -45,15 +45,8 @@ website_closed_response_503:
         restriction_mode: "Website Closed"       
         landing_page: 503 Service Unavailable
         http_response: 503 Service Unavailable     
-        
-enable_restriction:
-    configuration_scope: Default Config
-    tab_1:
-      tab_name: general_general
-      configuration:
-        access_restriction: Yes
 
-login_and_register_tologinform:
+login_and_register_to_login_form:
     configuration_scope: Default Config
     tab_1:
       tab_name: general_general
@@ -63,7 +56,7 @@ login_and_register_tologinform:
         startup_page: To login form (302 Found)
         landing_page: About Us       
       
-login_only_tologinform:
+login_only_to_login_form:
     configuration_scope: Default Config
     tab_1:
       tab_name: general_general
@@ -73,5 +66,14 @@ login_only_tologinform:
         startup_page: To login form (302 Found)
         landing_page: About Us
         http_response: 200 OK   
-        
-   
+
+login_only_to_landing_page:
+    configuration_scope: Default Config
+    tab_1:
+      tab_name: general_general
+      configuration:
+        access_restriction: Yes
+        restriction_mode: "Private Sales: Login Only"
+        startup_page: To landing page (302 Found)
+        landing_page: About Us
+        http_response: 200 OK
