--- a/fixture/community1701/core/Mage/SystemConfiguration/data/PaymentMethod.yml
+++ b/fixture/community1701/core/Mage/SystemConfiguration/data/PaymentMethod.yml
@@ -36,7 +36,7 @@ express_checkout_all_us:
             fieldset_1:
                 path: pec_required_settings/pec_ec_required_settings
                 data: &ec_required_settings
-                    ec_email_associated_with_paypal_merchant_account: test@example.com
+                    email_associated_with_paypal_merchant_account: test@example.com
                     api_authentication_methods: API Signature
                     api_username: test
                     api_password: test
@@ -48,7 +48,7 @@ express_checkout_all_us:
             fieldset_2:
                 path: pec_required_settings
                 data:
-                    ec_enable: Yes
+                    enable: Yes
             fieldset_3:
                 path: pec_ec_basic_settings
                 data: &ec_basic_settings
@@ -128,16 +128,7 @@ paypal_all_in_one_us_ppa:
                     pa_test_mode: Yes
             fieldset_2:
                 path: ppa_required_settings/ppa_ec_required_settings
-                data:
-                    ec_email_associated_with_paypal_merchant_account: test@example.com
-                    api_authentication_methods: API Signature
-                    api_username: test
-                    api_password: test
-                    api_signature: test
-                    ec_sandbox_mode: Yes
-                    ec_use_proxy: Yes #No
-                    ec_proxy_host: test
-                    ec_proxy_port: test
+                data: *ec_required_settings
             fieldset_3:
                 path: ppa_required_settings
                 data:
@@ -170,28 +161,10 @@ paypal_all_in_one_us_ppa:
                 data: *fe_settings
             fieldset_9:
                 path: ppa_ec_basic_settings
-                data:
-                    ec_title: PayPal Express Checkout
-                    ec_sort_order: 1
-                    ec_payment_action: Order
-                    ec_shortcut_on_cart: Yes
-                    ec_shortcut_on_product: Yes
-                    ec_authorization_honor_period: 4
-                    ec_order_valid_period: 30
-                    ec_child_authorization_number: 2
+                data: *ec_basic_settings
             fieldset_10:
                 path: ppa_ec_basic_settings/ppa_ec_basic_settings_advanced
-                data:
-                    ec_payment_applicable_from: All Allowed Countries
-                    ec_specific_countries_applicable_from: %noValue%
-                    ec_debug_mode: Yes
-                    ec_enable_ssl_verification: Yes
-                    ec_transfer_cart_line_items: Yes
-                    ec_transfer_shipping_options: No
-                    ec_shortcut_buttons_flavor: Dynamic
-                    ec_enable_guest_checkout: No
-                    ec_require_customer_billing_address: No
-                    ec_billing_agreement_signup: Never
+                data: *ec_basic_settings_advanced
 
 paypal_all_in_one_us_ppp:
     configuration_scope: Default Config
@@ -202,17 +175,7 @@ paypal_all_in_one_us_ppp:
             general_fieldset: paypal_all_in_one
             fieldset_1:
                 path: ppp_required_settings/ppp_pp_required_settings
-                data:
-                    pp_use_payment_bridge: No
-                    ec_email_associated_with_paypal_merchant_account: test@example.com
-                    api_authentication_methods: API Signature
-                    api_username: test
-                    api_password: test
-                    api_signature: test
-                    ec_sandbox_mode: Yes
-                    ec_use_proxy: Yes #No
-                    ec_proxy_host: test
-                    ec_proxy_port: test
+                data: *ec_required_settings
             fieldset_2:
                 path: ppp_required_settings
                 data:
@@ -247,28 +210,10 @@ paypal_all_in_one_us_ppp:
                 data: *fe_settings
             fieldset_8:
                 path: ppp_ec_basic_settings
-                data:
-                    ec_title: PayPal Express Checkout
-                    ec_sort_order: 1
-                    ec_payment_action: Order
-                    ec_shortcut_on_cart: Yes
-                    ec_shortcut_on_product: Yes
-                    ec_authorization_honor_period: 4
-                    ec_order_valid_period: 30
-                    ec_child_authorization_number: 2
+                data: *ec_basic_settings
             fieldset_9:
                 path: ppp_ec_basic_settings/ppp_ec_basic_settings_advanced
-                data:
-                    ec_payment_applicable_from: All Allowed Countries
-                    ec_specific_countries_applicable_from: %noValue%
-                    ec_debug_mode: Yes
-                    ec_enable_ssl_verification: Yes
-                    ec_transfer_cart_line_items: Yes
-                    ec_transfer_shipping_options: No
-                    ec_shortcut_buttons_flavor: Dynamic
-                    ec_enable_guest_checkout: No
-                    ec_require_customer_billing_address: No
-                    ec_billing_agreement_signup: Never
+                data: *ec_basic_settings_advanced
 
 paypal_all_in_one_us_pps:
     configuration_scope: Default Config
@@ -318,20 +263,11 @@ paypal_payment_gateways_us_pfl:
                     pl_test_mode: Yes
             fieldset_2:
                 path: pfl_required_settings/pfl_ec_required_settings
-                data:
-                    ec_email_associated_with_paypal_merchant_account: test_pfl@example.com
-                    api_authentication_methods: API Signature
-                    api_username: api_username_pfl_ec
-                    api_password: api_password_pfl_ec
-                    api_signature: api_signature_pfl_ec
-                    ec_sandbox_mode: Yes
-                    ec_use_proxy: Yes #No
-                    ec_proxy_host: test_pfl
-                    ec_proxy_port: 80pfl
+                data: *ec_required_settings
             fieldset_3:
                 path: pfl_required_settings
                 data:
-                    pl_enable: Yes
+                    enable: Yes
                     ec_enable: Yes
             fieldset_4:
                 path: pfl_basic_settings
@@ -358,28 +294,10 @@ paypal_payment_gateways_us_pfl:
                 data: *fe_settings
             fieldset_9:
                 path: pfl_ec_basic_settings
-                data:
-                    ec_title: PayPal Express Checkout
-                    ec_sort_order: 1
-                    ec_payment_action: Order
-                    ec_shortcut_on_cart: Yes
-                    ec_shortcut_on_product: Yes
-                    ec_authorization_honor_period: 4
-                    ec_order_valid_period: 30
-                    ec_child_authorization_number: 2
+                data: *ec_basic_settings
             fieldset_10:
                 path: pfl_ec_basic_settings/pfl_ec_basic_settings_advanced
-                data:
-                    ec_payment_applicable_from: All Allowed Countries
-                    ec_specific_countries_applicable_from: %noValue%
-                    ec_debug_mode: Yes
-                    ec_enable_ssl_verification: Yes
-                    ec_transfer_cart_line_items: Yes
-                    ec_transfer_shipping_options: No
-                    ec_shortcut_buttons_flavor: Dynamic
-                    ec_enable_guest_checkout: No
-                    ec_require_customer_billing_address: No
-                    ec_billing_agreement_signup: Never
+                data: *ec_basic_settings_advanced
             fieldset_6:
                 path: pfl_ec_basic_settings/pfl_ec_basic_settings_advanced/pfl_ba_settings
                 data: *ba_settings
@@ -394,8 +312,7 @@ paypal_payment_gateways_us_pfp:
             fieldset_1:
                 path: pfp_required_settings/pfp_fp_required_settings
                 data:
-                    fp_use_payment_bridge: No
-                    fp_email_associated_with_paypal_merchant_account: test@example.com
+                    email_associated_with_paypal_merchant_account: test@example.com
                     fp_partner: fp_partner
                     fp_vendor: fp_vendor
                     fp_user: fp_user
@@ -434,7 +351,7 @@ paypal_payment_gateways_us_pfp:
                 data: *fe_settings
             fieldset_9:
                 path: pfp_ec_basic_settings
-                data:
+                data: &pro_ec_basic_settings
                     ec_title: PayPal Express Checkout
                     ec_sort_order: 1
                     ec_payment_action: Sale
@@ -442,14 +359,14 @@ paypal_payment_gateways_us_pfp:
                     ec_shortcut_on_product: Yes
             fieldset_10:
                 path: pfp_ec_basic_settings/pfp_ec_basic_settings_advanced
-                data:
+                data: &pro_ec_basic_settings_advanced
                     ec_payment_applicable_from: All Allowed Countries
                     ec_specific_countries_applicable_from: %noValue%
                     ec_debug_mode: Yes
                     ec_enable_ssl_verification: Yes
                     ec_transfer_cart_line_items: Yes
 
-paypal_payment_gateways_uk_pfp:
+paypal_payment_gateways_uk_wpfp:
     configuration_scope: Default Config
     merchant_country: United Kingdom
     configuration:
@@ -459,8 +376,7 @@ paypal_payment_gateways_uk_pfp:
             fieldset_1:
                 path: wpfp_required_settings/wpfp_fp_required_settings
                 data:
-                    fp_use_payment_bridge: No
-                    fp_email_associated_with_paypal_merchant_account: test@example.com
+                    email_associated_with_paypal_merchant_account: test@example.com
                     fp_partner: fp_partner
                     fp_vendor: fp_vendor
                     fp_user: fp_user
@@ -498,21 +414,11 @@ paypal_payment_gateways_uk_pfp:
                 path: wpfp_fp_basic_settings/wpfp_fp_basic_settings_advanced/wpfp_fe_settings
                 data: *fe_settings
             fieldset_9:
-                path: pfp_ec_basic_settings
-                data:
-                    ec_title: PayPal Express Checkout
-                    ec_sort_order: 1
-                    ec_payment_action: Sale
-                    ec_shortcut_on_cart: Yes
-                    ec_shortcut_on_product: Yes
+                path: wpfp_ec_basic_settings
+                data: *pro_ec_basic_settings
             fieldset_10:
-                path: pfp_ec_basic_settings/pfp_ec_basic_settings_advanced
-                data:
-                    ec_payment_applicable_from: All Allowed Countries
-                    ec_specific_countries_applicable_from: %noValue%
-                    ec_debug_mode: Yes
-                    ec_enable_ssl_verification: Yes
-                    ec_transfer_cart_line_items: Yes
+                path: wpfp_ec_basic_settings/wpfp_ec_basic_settings_advanced
+                data: *pro_ec_basic_settings_advanced
 ################ Test dataset examples(Should be deleted) End
 
 #<-------------PayPal Direct Payment Payflow Edition------------------------>
@@ -526,8 +432,7 @@ payflowpro_without_3Dsecure:
             fieldset_1: &pfp_fp_required_settings
                 path: pfp_required_settings/pfp_fp_required_settings
                 data:
-                    fp_use_payment_bridge: No
-                    fp_email_associated_with_paypal_merchant_account:
+                    email_associated_with_paypal_merchant_account:
                     fp_partner: PayPal
                     fp_vendor: petervarienpayflowpro
                     fp_user: petervarienpayflowpro
@@ -601,12 +506,11 @@ paypaldirect_without_3Dsecure:
             fieldset_1: &ppp_pp_required_settings
                 path: ppp_required_settings/ppp_pp_required_settings
                 data:
-                    pp_use_payment_bridge: No
-                    email_associated_with_paypal_merchant_account:
+                    email_associated_with_paypal_merchant_account: 'YOUR CREDENTIALS'
                     api_authentication_methods: API Signature
-                    api_username:
-                    api_password:
-                    api_signature:
+                    api_username: 'YOUR CREDENTIALS'
+                    api_password: 'YOUR CREDENTIALS'
+                    api_signature: 'YOUR CREDENTIALS'
                     ec_sandbox_mode: Yes
                     ec_use_proxy: No
             fieldset_2: &ppp_required_settings
@@ -683,8 +587,7 @@ paypaldirectuk_without_3Dsecure:
             fieldset_1: &wpfp_fp_required_settings
                 path: wpfp_required_settings/wpfp_fp_required_settings
                 data:
-                    fp_use_payment_bridge: No
-                    fp_email_associated_with_paypal_merchant_account: lindy_1201044142_biz@varien.com
+                    email_associated_with_paypal_merchant_account: lindy_1201044142_biz@varien.com
                     fp_partner: PayPalUK
                     fp_vendor: lindyvarien2
                     fp_user: lindyvarien2
