--- a/fixture/community1701/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
+++ b/fixture/community1701/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
@@ -174,13 +174,13 @@ system_configuration:
                                     links:
                                         ppa_fe_settings_section: //a[@id='payment_frontend-head']
                                     fields:
-                                        ppa_page_style: //input[@id='payment_frontend_page_style']
-                                        ppa_header_image_url: //input[@id='payment_frontend_paypal_hdrimg']
-                                        ppa_header_background_color: //input[@id='payment_frontend_paypal_hdrbackcolor']
-                                        ppa_header_border_color: //input[@id='payment_frontend_paypal_hdrbordercolor']
-                                        ppa_page_background_color: //input[@id='payment_frontend_paypal_payflowcolor']
+                                        ppa_fe_page_style: //input[@id='payment_frontend_page_style']
+                                        ppa_fe_header_image_url: //input[@id='payment_frontend_paypal_hdrimg']
+                                        ppa_fe_header_background_color: //input[@id='payment_frontend_paypal_hdrbackcolor']
+                                        ppa_fe_header_border_color: //input[@id='payment_frontend_paypal_hdrbordercolor']
+                                        ppa_fe_page_background_color: //input[@id='payment_frontend_paypal_payflowcolor']
                                     dropdowns:
-                                        ppa_product_logo: //select[@id='payment_frontend_logo']
+                                        ppa_fe_product_logo: //select[@id='payment_frontend_logo']
                             -
                                 #PayPal All-in-one Payment Solutions ==> Payments Advanced (Includes Express Checkout) ==> Basic Settings - PayPal Express Checkout
                                 ppa_ec_basic_settings:
@@ -239,7 +239,6 @@ system_configuration:
                                         ppp_ec_proxy_host: //input[@id='payment_wpp_and_express_checkout_proxy_host']
                                         ppp_ec_proxy_port: //input[@id='payment_wpp_and_express_checkout_proxy_port']
                                     dropdowns:
-                                        ppp_pp_use_payment_bridge: //select[@id='payment_wpp_and_express_checkout_using_pbridge']
                                         ppp_api_authentication_methods: //select[@id='payment_wpp_and_express_checkout_api_authentication']
                                         ppp_ec_sandbox_mode: //select[@id='payment_wpp_and_express_checkout_sandbox_flag']
                                         ppp_ec_use_proxy: //select[@id='payment_wpp_and_express_checkout_use_proxy']
@@ -410,7 +409,7 @@ system_configuration:
                                     links:
                                         wpfp_fp_required_settings_section: //a[@id='payment_pp_pe_api_settings-head']
                                     fields:
-                                        wpfp_fp_email_associated_with_paypal_merchant_account: //input
+                                        wpfp_email_associated_with_paypal_merchant_account: //input[@id='payment_pp_pe_api_settings_business_account']
                                         wpfp_fp_partner: //input[@id='payment_pp_pe_api_settings_partner']
                                         wpfp_fp_vendor: //input[@id='payment_pp_pe_api_settings_vendor']
                                         wpfp_fp_user: //input[@id='payment_pp_pe_api_settings_user']
@@ -418,7 +417,6 @@ system_configuration:
                                         wpfp_fp_proxy_host: //input[@id='payment_pp_pe_api_settings_proxy_host']
                                         wpfp_fp_proxy_port: //input[@id='payment_pp_pe_api_settings_proxy_port']
                                     dropdowns:
-                                        wpfp_fp_use_payment_bridge: //select[@id='payment_pp_pe_api_settings_using_pbridge']
                                         wpfp_fp_use_proxy: //select[@id='payment_pp_pe_api_settings_use_proxy']
                                         wpfp_fp_test_mode: //select[@id='payment_pp_pe_api_settings_sandbox_flag']
                             -
@@ -539,7 +537,7 @@ system_configuration:
                                     links:
                                         pfp_fp_required_settings_section: //a[@id='payment_paypal_payflow_api_settings-head']
                                     fields:
-                                        pfp_fp_email_associated_with_paypal_merchant_account: //input[@id='payment_paypal_payflow_api_settings_business_account']
+                                        pfp_email_associated_with_paypal_merchant_account: //input[@id='payment_paypal_payflow_api_settings_business_account']
                                         pfp_fp_partner: //input[@id='payment_paypal_payflow_api_settings_partner']
                                         pfp_fp_vendor: //input[@id='payment_paypal_payflow_api_settings_vendor']
                                         pfp_fp_user: //input[@id='payment_paypal_payflow_api_settings_user']
@@ -547,7 +545,6 @@ system_configuration:
                                         pfp_fp_proxy_host: //input[@id='payment_paypal_payflow_api_settings_proxy_host']
                                         pfp_fp_proxy_port: //input[@id='payment_paypal_payflow_api_settings_proxy_port']
                                     dropdowns:
-                                        pfp_fp_use_payment_bridge: //select[@id='payment_paypal_payflow_api_settings_using_pbridge']
                                         pfp_fp_use_proxy: //select[@id='payment_paypal_payflow_api_settings_use_proxy']
                                         pfp_fp_test_mode: //select[@id='payment_paypal_payflow_api_settings_sandbox_flag']
                             -
