[TEST][UIMAP][HELPER] Implemented MAGETWO-1358: Layered navigation by categories - implemented tests, helper an UImap

--- a/config/config.yml
+++ b/config/config.yml
@@ -88,13 +88,13 @@ applications:
         fallbackOrderHelper: 'Core'
         areas:
             admin:
-                url: 'http://www.localhost.com/magento/admin/'
+                url: 'https://kq.varien.com/magentoconnect/magentoconnect/temp4/admin/'
                 base_page_uimap: 'log_in_to_admin'
                 uimap_path: 'admin'
                 login: 'admin'
                 password: '123123q'
             frontend:
-                url: 'http://www.localhost.com/magento/'
+                url: 'https://kq.varien.com/magentoconnect/magentoconnect/temp4/'
                 base_page_uimap: 'home_page'
                 uimap_path: 'frontend'
                 login: ''
@@ -165,4 +165,22 @@ applications:
                 password: ''
             paypal_sandbox: *paypalSandbox
             paypal_developer: *paypalDeveloper
-    default: *enterprise
+    magento17community: &magento17community
+         fallbackOrderFixture: 'community17, default'
+         fallbackOrderHelper: 'community17, Core'
+         areas:
+            admin:
+                url: 'http://www.localhost.com/magento17_community/control/'
+                base_page_uimap: 'log_in_to_admin'
+                uimap_path: 'admin'
+                login: 'admin'
+                password: '123123q'
+            frontend:
+                url: 'http://www.localhost.com/magento17_community/'
+                base_page_uimap: 'home_page'
+                uimap_path: 'frontend'
+                login: ''
+                password: ''
+            paypal_sandbox: *paypalSandbox
+            paypal_developer: *paypalDeveloper
+    default: *magento17community
