[TEST] [HELPER] [DATA] [UIMAP] Re-factored MAGETWO-1366 - Customer Attribute Functionality - Modified structure and refactored according to review results

--- a/config/config.yml
+++ b/config/config.yml
@@ -165,4 +165,22 @@ applications:
                 password: ''
             paypal_sandbox: *paypalSandbox
             paypal_developer: *paypalDeveloper
+    magento17community: &magento17community
+            fallbackOrderFixture: 'Community17, default'
+            fallbackOrderHelper: 'Community17, Core'
+            areas:
+                admin:
+                    url: 'http://www.localhost.com/magento2_community/control/'
+                    base_page_uimap: 'log_in_to_admin'
+                    uimap_path: 'admin'
+                    login: 'admin'
+                    password: '123123q'
+                frontend:
+                    url: 'http://www.localhost.com/magento2_community/'
+                    base_page_uimap: 'home_page'
+                    uimap_path: 'frontend'
+                    login: ''
+                    password: ''
+                paypal_sandbox: *paypalSandbox
+                paypal_developer: *paypalDeveloper
     default: *mage
