--- a/dev/tests/integration/phpunit.xml.dist
+++ b/dev/tests/integration/phpunit.xml.dist
@@ -63,6 +63,6 @@
     </php>
     <!-- Test listeners -->
     <listeners>
-        <listener class="Magento_Test_Listener"/>
+        <listener class="Magento_Test_Event_PhpUnit"/>
     </listeners>
 </phpunit>
